# jaios

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_finance_and_compliance.py  0003_users.py  0004_india_llp_extend.py  0005_workspace_ai_provider.py
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  definitions.py  registry.py  types.py
backend/app/api/: deps.py
backend/app/core/: llm_provider.py  logging.py  metrics.py  middleware.py  secrets.py  security.py
backend/app/db/: base.py  session.py
backend/app/governance/: approvals.py  audit_log.py  permissions.py
backend/app/knowledge/: ingest.py  retrieval.py
backend/app/memory/: embeddings.py  store.py
backend/app/models/: __init__.py  agent.py  ai_provider_config.py  ai_usage.py  audit.py  company.py  compliance.py  finance.py  knowledge.py  memory.py  product.py  project.py  task.py  user.py  workflow.py  workspace.py
backend/tests/: conftest.py  test_agent_registry.py  test_ai_providers.py  test_auth.py  test_coding_worker_tool.py  test_compliance.py  test_compliance_framework.py  test_cross_tenant_access.py  test_finance.py  test_github_tool.py  test_governance.py  test_knowledge.py  test_models.py  test_observability.py  test_orchestration.py  test_qa_runner_tool.py  test_reports.py  test_security.py  test_slack_tool.py  test_specialized_nodes.py  test_task_routing.py  test_tools.py  test_workers.py  test_workflow_approval_auth.py  test_workflow_service.py  test_workspace_scoping.py
docs/: README.md  (+10 more)
(+123 files in other folders)
