[project]
name = "jaios-backend"
version = "0.1.0"
description = "Jyka AI Operating System — backend (FastAPI + LangGraph)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3.6",
  "langgraph>=0.2.45",
  "langgraph-checkpoint-postgres>=2.0.1",
  "langchain-core>=0.3.15",
  "anthropic>=0.39",
  "openai>=1.54",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "structlog>=24.4",
  "prometheus-client>=0.21",
  "pyjwt>=2.9",
  "bcrypt>=4.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "black>=24.10",
  "mypy>=1.13",
  "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's `Depends(...)` in a default argument is the framework's
# documented dependency-injection pattern, not the mutable-default-argument
# bug bugbear's B008 warns about.
"app/api/routers/*.py" = ["B008"]
"app/api/deps.py" = ["B008"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
